--- a/Week2_Day5_CSS/styles.css
+++ b/Week2_Day5_CSS/styles.css
@@ -15,15 +15,15 @@
 }
 
 #shoppingList{
-    list-style-image: url(https://yt3.ggpht.com/a/AGF-l782iYF4BjAX8hOkObzgG650p6aQjwR1DWkQ-g=s100-c-k-c0xffffffff-no-rj-mo);
-    padding-left: 100px;
+    list-style-image: url(icon1.png);
+    /*padding-left: 100px;*/
     width: 200px;
 
 }
 
 #vrsteOruzja{
-    list-style-image: url(https://yt3.ggpht.com/a/AGF-l782iYF4BjAX8hOkObzgG650p6aQjwR1DWkQ-g=s100-c-k-c0xffffffff-no-rj-mo);
-    padding-left: 100px;
+    list-style-image: url(icon2.png);
+    /*padding-left: 100px;*/
     width: 200px;
     list-style-position: inside;
 }
@@ -77,7 +77,7 @@ th{
     width: 20%;
     margin: auto;
     padding: 50px;
-    margin-top: 100px;
+    margin-top: 50px;
     font-family: sans-serif;
     border-radius: 30px 0 30px 0;
     
