--- a/Week3_Day1_CSS/layout2.css
+++ b/Week3_Day1_CSS/layout2.css
@@ -1,53 +1,60 @@
 
+body
+{
+    background-color: #ddd;
+}
 
 ul {
+    padding: 0;
     list-style-type: none;
-    ;
-    
-}
-.meni2 {
-    position: relative;
-    
-    
-}
-.submeni1 {
-    position: absolute;
-    top: 20px;
-    right: -5px;
-    display: none;
-}
-.submeni2 {
-    position: absolute;
-    top: 80px;
-    right: -5px;
-    display: none;
-}
-.submeni3 {
-    position: absolute;
-    top: 140px;
-    right: -5px;
-    display: none;
 }
 
-li {
-    display: inline-block;
-    margin: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100px;
-}
-
-
-#firstCell {
-    background-color: rgb(233, 227, 227);
-    width: 100px;
-    height: 25px;
-    ;
-    text-align: center;
-}
-div{
+.menu {
+    padding: 10px;
     background-color: orange;
-    height: 50px;
 }
-ul>li.meni2:hover li {
+
+
+.menu > li {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+
+}
+
+.menu > li.active {
+    background-color: rgb(200, 200, 200);
+}
+    
+
+.menu > li:hover {
+    background-color: #ddd ;
+}
+
+.menu > li ul {
+    position: absolute;
+    display: none;
+    left: 0;
+    top: 100%;
+}
+
+.menu > li:hover ul {
     display: block;
 }
+
+.menu > li ul li {
+    background-color: #fff;
+    min-width: 150px;
+    padding: 10px 20px;
+}
+
+.menu > li ul li:hover {
+    background-color: #ddd;
+}
+
+a:hover {
+    color: red;
+    text-decoration: none;
+
+}
+
