--- a/Week3_Day2_CSS/float.css
+++ b/Week3_Day2_CSS/float.css
@@ -100,6 +100,15 @@ ul > li {
 
 .footer{
     width: 100%;
-    height: 70px;
+    height: 60px;
     background-color: #2d3e50;
+    color: white;
+    font-size: 13px;
+    clear: both;
+}
+
+.footer p {
+    position: absolute;
+    left: 200px;
+}
 
