--- a/Week3_Day3_CSS/mock.css
+++ b/Week3_Day3_CSS/mock.css
@@ -1,14 +1,10 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
 
 header {
     height: 200px;
     width: 60%;
     margin-right: auto;
     margin-left: auto;
-    clear: both;
+  
     
 }
 
@@ -31,8 +27,8 @@ main {
     margin-right: auto;
     margin-left: auto;
     width: 60%;
+    padding-bottom: 100px;
     clear: both;
-    
     
 }
 main #levi {
@@ -47,3 +43,13 @@ main #desni {
     border-left: 2px solid ;
     padding-left: 15px;
  } 
+
+.clearfix:before,
+.clearfix:after {
+    content: '';
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
