--- a/Week3_Day3_CSS/style2310.css
+++ b/Week3_Day3_CSS/style2310.css
@@ -5,15 +5,19 @@
     list-style: none;
     text-decoration: none;
 }
-#veliki{
+
+#veliki {
+    width: 960px;
+    margin: 0px auto;
     padding-bottom: 300px;
+}
+
+
+main{
     width: 960px;
 }
 
-#veliki, #bot p{
-    width: 960px;
-    margin: 0px auto;
-}
+
 header:before, header:after{
     content: "";
     display: table;
@@ -36,6 +40,7 @@ nav .item{
 section {
     padding-top: 2px; 
     width: 960px;
+    float: right;
 
 }
 section img{
@@ -72,15 +77,23 @@ article {
 }
 footer p{
     padding-left: 480px;
-    font-size: 20px;
+    font-size: 15px;
 }
 footer {
     width: 100%;    
-    height: 60px;
+    height: 40px;
     background: #2d3e50;
-    line-height: 60px;
-    font-size: 35px;
+    line-height: 40px;
     position: fixed;
     bottom: 0px;
+    left: 0px;
     color:  white;
 }   
+footer:before, footer:after{
+    content: "";
+    display: table;
+}
+
+footer:after {
+    clear: both;
+}
