--- a/Week3_Day4_Day5_Project_CSS/project2.css
+++ b/Week3_Day4_Day5_Project_CSS/project2.css
@@ -17,14 +17,14 @@ body{
 #main-wrapper{
     width: 100%;
     position: relative;
-    left: 0;
+    
     top: 0;
 }
 header{
     background-image: url("./pictures/banner3.jpg");
     background-size: cover;
     width: 100%;
-    height: 550px;
+    height: 900px;
     top: 0;
     left: 0px;
 }
@@ -38,7 +38,6 @@ header h2 span{
     border-style: solid;
     border-width: 1px 0 1px 1px;
     border-color: white;
-
 }
 
 #headMain {
@@ -46,9 +45,10 @@ header h2 span{
     box-sizing: border-box;
     width: 100%;
     position: absolute;
-    top: 45%;
+    top: 50%;
     font-size: 45px;
     text-align: center;
+    
 }
 #headMain p{
     margin: 0;
@@ -87,12 +87,9 @@ header nav ul li {
     text-decoration: none;
 }
 
-
-
-
-main div article{
+.main1{
     float: left;
-    width: 26%;
+    width: 20%;
     padding: 10px;
     
 }
@@ -117,9 +114,113 @@ main{
     left: 0px;
     top: 0px;
 }
-main div{
-    position: absolute;
+.razd{
+    position: relative;
     left: 15%;
     padding-top: 20px;
 }
 
+main h3{
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.razd {
+    width: 70%;
+    height: 70px;
+    line-height: 70px;
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    margin: 10px 0px;
+    font-family: sans-serif;
+}
+.razd hr{
+    width: 25%;
+    margin: auto;
+    border: none;
+    background-color: black;
+    height: 2px;
+}
+.razd::before{
+    content: "";
+    height: 8px;
+    width: 8px;
+    position: absolute;
+    bottom: -17px;
+    left: 50%;
+    transform: rotate(45deg) translate(-50%, 0% );
+    background-color: white;
+    border: 2px solid black;
+}
+
+.checked {
+    color: orange;
+}
+
+
+#firstUnder{
+
+    width: 75%;
+    margin-left: 26%;
+}
+
+.main2{
+    float: left;
+    width: 30%;
+    background-color: #76b7ec;
+    color: white;
+    margin: 10px;
+    box-sizing: border-box;
+    padding: 35px;
+}
+
+#secondUnder{
+    width: 75%;
+    margin-left: 15%;
+    margin-top: 30px;
+}
+
+
+#secondUnder ul {
+
+    list-style-type: none;
+    padding: 0;
+    background-color: #76b7ec;
+} 
+
+#secondUnder ul li{
+    float: left;
+    color: rgb(0, 0, 0);
+    width: 30%;
+
+}
+
+.image{
+    border-radius: 50px;
+    width: 90%;
+}
+
+.stars{
+    width: 90%;
+}
+
+iFrame { margin-top: 30px;
+    width: 100%;
+    height: 600px;
+}
+
+.contactPage li{
+    float: left;
+}
+
+#contact{
+    background-color: rgb(12, 214, 120)
+}
+
+/* #connect
+
+#address
+
+#house */
