--- a/Project_CSS_Continued/project2.css
+++ b/Project_CSS_Continued/project2.css
@@ -25,7 +25,7 @@ header{
 header h2{
     float: left;
     color: white;
-    margin-left: 2%;
+    margin-left: 4%;
 }
 header h2 span{
     color: orange;
@@ -40,7 +40,7 @@ header h2 span{
     width: 100%;
     position: absolute;
     top: 50%;
-    font-size: 45px;
+    font-size: 47px;
     text-align: center;
     
 }
@@ -61,7 +61,7 @@ header nav {
 header nav ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 0px 44.31px 0 0;
 }
 
 header nav ul li {
@@ -83,7 +83,7 @@ header nav ul li {
 
 .main1{
     float: left;
-    width: 20%;
+    width: 31%;
     padding: 10px;
     
 }
@@ -157,7 +157,7 @@ main h3{
 #firstUnder{
 
     width: 75%;
-    margin-left: 26%;
+    margin: 0px auto;
 }
 
 .main2 {
