--- a/Project_CSS_Responsive/project2.css
+++ b/Project_CSS_Responsive/project2.css
@@ -357,7 +357,9 @@ footer{
 footer nav ul {
     list-style-type: none;
     padding: 0px;
-    margin: 50px 0px 20px;
+    margin: 50px 0px 20px 92px;
+
+
 }
 
 footer nav ul li {
