--- a/Week4_Day3_CSS/scss/_masthead.scss
+++ b/Week4_Day3_CSS/scss/_masthead.scss
@@ -13,14 +13,35 @@
 }
 
 #third, #fifth {
-    color: white;
-}
-#fa{
     color:white;
 }
-.left{
-    border-bottom: 3px;
-    width: 20px;
+
+.star1{
     color:white;
-    height: 10px;
+    display: block;
+    text-align: center;
+    height:10px;
+    width:10px;
 }
+
+
+.underline-left{
+    color:black;
+    display: block;
+    border-bottom: 3px solid black;
+    width: 75px;
+    margin-left: 844px;
+    position: relative;
+    top: 10px;
+
+}
+
+.underline-right {
+    display: block;
+    border-bottom: 3.5px solid black;
+    width: 75px;
+    margin-left: 960px;
+    position: relative;
+    bottom: 8px;
+}
+
