--- a/Project_CSS_Responsive/style2.css
+++ b/Project_CSS_Responsive/style2.css
@@ -203,4 +203,313 @@
     line-height: 30px;
 }
 
+#middlecard {
+    float: left;
+    margin: auto 2%;
+}
+.header_and_stars {
+    position: absolute;
+    top: 30%;
+    left: 40%;
+}
+.checked {
+    color: white;
+  }
+#gitwu {
+    
+    width:100%;
+    height:256px;
+    position: relative;
+}
+#green {
+    position: relative;
+    float: left;
+    width:25%;
+    height:256px;
+    background-color: #3bdd9a;
+}
+#phone{
+    position: relative;
+    color: white;
+    top:40%;
+    left:25%;
+}
+#phone span {
+    position: absolute;
+    top:30%;
+    margin-left: 5px;
+}
+.fa-mobile-phone {
+    font-size: 48px;
+}
+#mail {
+    position: relative;
+    color: white;
+    top:45%;
+    left:24%;
+}
+#mail span {
+    margin-left: 10px;
+}
+.fa-envelope {
+    font-size: 25px;
+}
 
+#pink {
+    position: relative;
+    float: left;
+    width:25%;
+    height:256px;
+    background-color: #fd5282;
+}
+#blue {
+    position: relative;
+    float: left;
+    width:25%;
+    height:256px;
+    background-color: #376de4;
+}
+#house {
+    float: left;
+    width: 25%;
+    background-color: #82c3f5;
+    position: relative;
+    height:256px;
+}
+#house img {
+    display: block;
+    margin: auto;
+    height: 100%;
+
+}
+.heading_of_card {
+     text-align: center;
+     position: absolute;
+     width:100%;
+     top: 25%;
+     color: white;
+     font-size: 25px;
+ }
+ #social {
+     color: white;
+     position: absolute;
+     width: 100%;
+     text-align: center;
+     font-size: 30px;
+     top:50%;
+ }
+ #social i {
+     margin-left: 0px;
+ }
+ #location {
+     text-align: center;
+     color: white;
+     position: absolute;
+     width:70%;
+     top:50%;
+     left:15%;
+ }
+ #map {
+     position: relative;
+     float: left;
+     width:100%;
+     margin-bottom: 4%;
+     
+ }
+ #map iframe {
+     position: relative;
+     width:100%;
+     height: 400px;
+ }
+#login_form {
+    box-sizing: border-box;
+    position: relative;
+    width:70%;
+    margin: auto;
+}
+#top_form {
+    box-sizing: border-box;
+    width:100%;
+    margin-bottom: 15px;
+    
+}
+.input {
+    box-sizing: border-box;
+    float: left;
+    width:32%;
+    height: 50px;
+    padding-left: 5px;
+    margin-bottom: 20px;
+   
+
+}
+.input_email {
+    box-sizing: border-box;
+    float: left;
+    width:32%;
+    margin: auto 2%;
+    height: 50px;
+    padding-left: 5px;
+}
+.input_area {
+    box-sizing: border-box;
+    width:100%;
+    height: 200px;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
+.input_button {
+    color: white;
+    background: orange;
+    width: 100px;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    margin: 20px 0px;
+  }
+#footer {
+    position: relative;
+    width:100%;
+    background-color: #212121;
+}
+#footer_content {
+    text-align: center;
+    margin: auto;
+    color: white;
+}
+#footer_content ul{
+    list-style: none;
+    padding: 40px 0px 20px 0px;
+}
+#footer_content ul li {
+    display: inline-block;
+    padding:10px;
+}
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+#footer_content p {
+    margin-bottom: 20px;
+}
+
+@media screen and (max-width: 870px){
+    #banner p{
+        font-size: 30px;
+    }
+    .text {
+
+        width: 50%;
+    }
+    #wwa img {
+        margin: 0px;
+        width: 50%;
+    }
+    #text_tablet {
+        width: 100%;
+    }
+    .text h3 {
+        font-size: 16px;
+        
+    }
+    .text p {
+        font-size: 14px;
+        line-height: 15px;
+        padding-right: 10px;
+        
+    }
+    .lista {
+        font-size: 12px;
+    }
+    .bluecard {
+        width:48%;
+        box-sizing: border-box;
+       margin-bottom: 10px;
+       font-size: 15px;
+
+    }
+    #middlecard {
+        margin: 0;
+        margin-left: 4%;
+        margin-bottom: 10px;
+    }
+    .bluecard h1{
+        font-size: 15px;
+    }
+    .header_and_stars {
+        font-size: 15px;
+        left: 50%;
+    }
+    #green , #pink, #blue, #house {
+        width: 50%;
+    }
+    .input {
+        margin-bottom: 20px;
+    }
+
+}
+@media screen and (max-width: 700px){
+    #logo {
+        position: relative;
+        color: darkslategray;
+        text-align: center;
+        top:0;
+        left: 0;
+        margin: 20px 0px;
+    }
+    #logo span {
+        border-color: #717171;
+    }
+    #menu {
+        position: relative;
+        top:0;
+        left: 0;
+        width: 90%;
+        margin: 40px auto;
+        
+        
+    }
+    .menu_item{
+        background-color: #7fc2f7;
+        float: none;
+        display: block;
+        text-align: center;
+    }
+
+    .text {
+        width: 100%;
+        margin: 0;
+    }
+    #wwa img {
+        width: 100%;
+        margin: 0;
+    }
+    .bluecard {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 20px;
+    }
+    #middlecard {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 20px;
+    }
+    .input {
+        float: none;
+        width: 100%;
+        margin: 0;
+        margin-bottom: 20px;
+    }
+    #banner p {
+        font-size: 20px;
+    }
+    .header_and_stars {
+        font-size: 15px;
+        top: 25%;
+        left: 33%;
+    }
+    .header_and_stars h1{
+        font-size: 20px;
+    }
+}
