--- a/Project_CSS_Responsive/css/style2.css
+++ b/Project_CSS_Responsive/css/style2.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: font1; /* ovde definises svoj naziv za font*/
-    src: url(/fonts/Roboto-Regular.ttf);/* a ovde specifiras koji je font u pitanju*/
+    src: url(../fonts/Roboto-Regular.ttf);/* a ovde specifiras koji je font u pitanju*/
 }
 
 
@@ -52,7 +52,7 @@ nav ul li a{ /*uvek treba da su linkovi deo menija inace nece moci da se klikne 
 
 #headMain {
     
-    background-image: url("/pictures/banner3.jpg");
+    background-image: url("../pictures/banner3.jpg");
     height: 400px;
     color: white;
     display: block;
@@ -168,7 +168,7 @@ nav ul li a{ /*uvek treba da su linkovi deo menija inace nece moci da se klikne 
 }
 
 .main1 ul{
-    list-style-image: url(/pictures/arrow_bullet.png); 
+    list-style-image: url(../pictures/arrow_bullet.png); 
     padding-left: 15px;
     width: 95%;
 
