--- a/Project_CSS_Responsive/css/style2.css
+++ b/Project_CSS_Responsive/css/style2.css
@@ -1,6 +1,6 @@
 @font-face{
-    font-family: font1; /* ovde definises svoj naziv za font*/
-    src: url(../fonts/Roboto-Regular.ttf);/* a ovde specifiras koji je font u pitanju*/
+    font-family: font1; /* ovde definisati svoj naziv za font*/
+    src: url(../fonts/Roboto-Regular.ttf);/* a ovde specifirati koji je font u pitanju*/
 }
 
 
