--- a/Project_CSS_Responsive/css/desk.css
+++ b/Project_CSS_Responsive/css/desk.css
@@ -290,17 +290,17 @@ iframe {
 
 .mytext {
   height: 50px;
-  width: 20%;
+  width: 17.55%;
   padding: 13px 13px;
   box-sizing: border-box;
 }
 
 #name {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 #email {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 #form {
