--- a/Project_CSS_Responsive/css/style2.css
+++ b/Project_CSS_Responsive/css/style2.css
@@ -293,17 +293,17 @@ iframe {
 
 .mytext {
   height: 50px;
-  width: 20%;
+  width: 17.55%;
   padding: 13px 13px;
   box-sizing: border-box;
 }
 
 #name {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 #email {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 #form {
@@ -312,7 +312,7 @@ iframe {
 }
 
 #mytextarea {
-  width: 63.5%;
+  width: 64%;
   margin-top: 30px;
   height: 300px;
   padding: 13px 13px;
@@ -354,7 +354,7 @@ footer ul li {
   list-style-type: none;
   margin: 0 auto;
 
-  padding-left: 25px;
+  padding-left: 12px;
   text-align: center;
   display: inline-block;
 }
