--- a/Project_CSS_Responsive/css/tablet.css
+++ b/Project_CSS_Responsive/css/tablet.css
@@ -126,6 +126,7 @@ nav ul li a {
   display: block;
   width: 100%;
   margin-top: 21.28px;
+  height: 400px;
 }
 
 .main1 h3 {
@@ -161,7 +162,7 @@ nav ul li a {
 
 #secondUnder {
   width: 90%;
-  margin-left: 5%;
+  margin-left: 6.5%;
   margin-top: 30px;
 }
 
@@ -218,7 +219,7 @@ li#contact {
   height: 170.23px;
   color: white;
   text-align: center;
-  padding: 50px 45px;
+  padding: 25px 45px;
   box-sizing: border-box;
 }
 
@@ -229,7 +230,7 @@ li#connect {
   height: 170.23px;
   color: white;
   text-align: center;
-  padding: 50px 50px 90.49px;
+  padding: 25px 50px;
   box-sizing: border-box;
 }
 
@@ -240,7 +241,7 @@ li#address {
   height: 170.23px;
   color: white;
   text-align: center;
-  padding: 50px 12px 70.97px;
+  padding: 25px 12px;
   box-sizing: border-box;
 }
 
@@ -256,10 +257,6 @@ li#house {
 #contactDiv ul {
   list-style-type: none;
   padding: 0;
-}
-
-#contactPage ul li {
-  float: left;
 }
 
 #contact img {
@@ -368,4 +365,8 @@ footer div {
 .copyright {
   text-align: center;
   margin: 0px auto 30px auto;
+}
+
+.clear {
+  clear: both;
 }
